--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -56,10 +56,12 @@
     <div id="deleteModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeDeleteModal()">&times;</span>
-            <p>Are you sure you want to delete this contact?</p>
+            <p style="text-align: center;">Are you sure you want to delete this contact?</p>
             <form id="deleteForm" method="POST" action="">
-                <button type="submit" class="delete-btn">Delete</button>
-                <button type="button" class="btn" onclick="closeDeleteModal()">Cancel</button>
+                <div class="form-actions" style="justify-content: center;">
+                    <button type="submit" class="btn btn-primary">Delete</button>
+                    <button type="button" class="btn btn-danger" onclick="closeDeleteModal()">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
